# axum_openapi

./: Cargo.toml  README.md
axum_openapi_derive/: Cargo.toml
axum_openapi_derive/src/: describe_schema.rs  handler.rs  lib.rs  routes.rs
examples/: petstore.rs
src/: describe_impl.rs  global_collect.rs  lib.rs  openapi_adapters.rs  openapi_impl.rs  openapi_traits.rs  operation_impl.rs  utils.rs
