[package]
name = "axum_openapi"
version = "0.1.0"
edition = "2018"

[dependencies]
openapiv3 = "0.5"
inventory = "0.1"

axum = "0.1"
serde = "1.0"
hyper = "0.14"
serde_yaml = "0.8"
once_cell = "1.0"

axum_openapi_derive = { path = "./axum_openapi_derive" }

[dev-dependencies]
axum = { version = "0.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.9", features = ["full"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }

[workspace]
members = [".", "axum_openapi_derive"]
