[package]
name = "axum_openapi"
version = "0.1.0"
edition = "2018"
license = "MIT"

[features]
default = ["skip_serializing_defaults"]
skip_serializing_defaults = ["openapiv3/skip_serializing_defaults"]

macro-based = ["inventory", "once_cell", "axum_openapi_derive/macro-based"]

[dependencies]
openapiv3 = "0.5"

axum = "0.1"
serde = "1.0"
hyper = "0.14"
serde_yaml = "0.8"

inventory = { version = "0.1", optional = true }
once_cell = { version = "1.0", optional = true }

axum_openapi_derive = { path = "./axum_openapi_derive" }

[dev-dependencies]
axum = { version = "0.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.9", features = ["full"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }

[workspace]
members = [".", "axum_openapi_derive"]
